# Code-Knowledge-Compiler

./: .gitignore  Cargo.toml  PRD.md  README.md  requirement.md
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
crates/ckc-cli/: Cargo.toml
crates/ckc-cli/src/: main.rs  mcp.rs
crates/ckc-core/: Cargo.toml
crates/ckc-core/src/: lib.rs  resolver.rs
crates/ckc-graph/: Cargo.toml
crates/ckc-graph/src/: lib.rs
crates/ckc-ir/: Cargo.toml
crates/ckc-ir/src/: lib.rs
crates/ckc-llm/: Cargo.toml
crates/ckc-llm/src/: lib.rs
crates/ckc-parser/: Cargo.toml
crates/ckc-parser/src/: lib.rs  rust_parser.rs
test_project/: calc.py  main.py  models.py  services.py
test_project/pkg/: __init__.py  payments.py
