[workspace]
resolver = "2"
members = [
    "crates/ckc-ir",
    "crates/ckc-parser",
    "crates/ckc-graph",
    "crates/ckc-core",
    "crates/ckc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Code-Knowledge-Compiler/ckc"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.26"
